--- a/www.dz-rs.si/04a0bd7b2eca5d4bc67d3c71a959b06c2197a5bf.yml
+++ b/www.dz-rs.si/04a0bd7b2eca5d4bc67d3c71a959b06c2197a5bf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:35:09 GMT
+    - Mon, 02 Apr 2018 08:36:05 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -42,15 +42,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000LjOA9RGzWu_Y0H7u7C2QELM:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000coKdkhfMyjwpaGWurcKb30S:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25439739;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=af561ea8;default;FP4->80;C007;
+    - F7360B2047A90E4D;87d9ab10;740429;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->289;C007;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25439739)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-740429)
     Content-Length:
-    - '13487'
+    - '13498'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:35:08 GMT
+recorded_at: Mon, 02 Apr 2018 08:36:03 GMT
