--- a/www.dz-rs.si/397cb950b39df0d7ceb5819da00dd0ce2a44c299.yml
+++ b/www.dz-rs.si/397cb950b39df0d7ceb5819da00dd0ce2a44c299.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:35:23 GMT
+    - Mon, 02 Apr 2018 08:36:13 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000r1yPVSfmcfDnVxxw3yaynuQ:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000B03wjBigzIxmnDmMtdYU8kg:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25439761;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=af561ea8;default;FP4->61;C003;
+    - F7360B2047A90E4D;87d9ab10;740517;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->64;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25439761)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-740517)
     Content-Length:
     - '13244'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:35:21 GMT
+recorded_at: Mon, 02 Apr 2018 08:36:12 GMT
