--- a/www.dz-rs.si/283432c002ab84a76910cb4b2e42248dc7c03436.yml
+++ b/www.dz-rs.si/283432c002ab84a76910cb4b2e42248dc7c03436.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:35:43 GMT
+    - Mon, 02 Apr 2018 08:36:36 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000NblYB7isd_ODwTSBYhWuwk3:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000WmAOJNcc85ED6M0kuQR3Bfx:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25439808;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->7;EvalII->7;CHd;FP2->7;WS=af561ea8;default;FP4->55;C003;
+    - F7360B2047A90E4D;87d9ab10;740701;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->57;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25439808)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-740701)
     Content-Length:
-    - '12681'
+    - '12682'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:35:42 GMT
+recorded_at: Mon, 02 Apr 2018 08:36:35 GMT
