--- a/www.dz-rs.si/f0ba4a1e2654b75b8ea1e98fa16e0ada981857b1.yml
+++ b/www.dz-rs.si/f0ba4a1e2654b75b8ea1e98fa16e0ada981857b1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:36:08 GMT
+    - Mon, 02 Apr 2018 08:36:57 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000fM6VaeUHyIs-9EJosnSfpGA:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000ruKnVRnh70WaGf060QCYx_2:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25439865;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->6;EvalII->6;CHd;FP2->6;WS=af561ea8;default;FP4->52;C003;
+    - F7360B2047A90E4D;87d9ab10;740801;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->56;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25439865)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-740801)
     Content-Length:
-    - '13693'
+    - '13695'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:36:07 GMT
+recorded_at: Mon, 02 Apr 2018 08:36:56 GMT
