--- a/www.dz-rs.si/2bbd3e492e70d0aa001caed7a697192bdd92681d.yml
+++ b/www.dz-rs.si/2bbd3e492e70d0aa001caed7a697192bdd92681d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:36:17 GMT
+    - Mon, 02 Apr 2018 08:37:10 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000vSDCoCb-1CSThEbZxY2zLIP:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000qllJZcVjtIQ-r98smNUq5o7:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25439880;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->10;EvalII->10;CHd;FP2->10;WS=af561ea8;default;FP4->69;C003;
+    - F7360B2047A90E4D;87d9ab10;740871;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->55;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25439880)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-740871)
     Content-Length:
-    - '12675'
+    - '12677'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:36:16 GMT
+recorded_at: Mon, 02 Apr 2018 08:37:09 GMT
