--- a/www.dz-rs.si/2d5491b77e2e7defab90545aaf8fb9f1f8800a59.yml
+++ b/www.dz-rs.si/2d5491b77e2e7defab90545aaf8fb9f1f8800a59.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:37:06 GMT
+    - Mon, 02 Apr 2018 08:37:57 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000Ajifdk28u1ExEO5FPMMpVA7:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000muqD3HBE-YEUlE_DzFzH1EP:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25439971;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=af561ea8;default;FP4->58;C003;
+    - F7360B2047A90E4D;87d9ab10;741125;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->61;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25439971)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-741125)
     Content-Length:
-    - '12953'
+    - '12954'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:37:05 GMT
+recorded_at: Mon, 02 Apr 2018 08:37:56 GMT
