--- a/www.dz-rs.si/81bd5cba90e6b8bc25edbd06dfa4f0861c7e2ce3.yml
+++ b/www.dz-rs.si/81bd5cba90e6b8bc25edbd06dfa4f0861c7e2ce3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:37:29 GMT
+    - Mon, 02 Apr 2018 08:38:21 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=00009SzQEwy9X2O6dpjHdThu4d8:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=00005VwsAskaQIp4hauFX9Ic5pd:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440011;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->7;EvalII->7;CHd;FP2->7;WS=af561ea8;default;FP4->58;C003;
+    - F7360B2047A90E4D;87d9ab10;741275;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->132;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440011)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-741275)
     Content-Length:
-    - '12699'
+    - '12739'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:37:27 GMT
+recorded_at: Mon, 02 Apr 2018 08:38:19 GMT
