--- a/www.dz-rs.si/dc887d1fb188ba7c3f7046b75b11edd0bcdd80b0.yml
+++ b/www.dz-rs.si/dc887d1fb188ba7c3f7046b75b11edd0bcdd80b0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:37:42 GMT
+    - Mon, 02 Apr 2018 08:38:32 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000if14fbAqW624BOhYvWhnhQ3:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000NOAZzt1kB7U_oss-T9_1Eci:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440048;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->6;EvalII->6;CHd;FP2->6;WS=af561ea8;default;FP4->56;C003;
+    - F7360B2047A90E4D;87d9ab10;741318;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=fd938310;default;FP4->55;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440048)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-741318)
     Content-Length:
-    - '12840'
+    - '12837'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:37:40 GMT
+recorded_at: Mon, 02 Apr 2018 08:38:30 GMT
