--- a/www.dz-rs.si/a44bee10da7350772adc62d5e510f23c87dea420.yml
+++ b/www.dz-rs.si/a44bee10da7350772adc62d5e510f23c87dea420.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:37:55 GMT
+    - Mon, 02 Apr 2018 08:38:44 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000mAmO4_xbeuaxOUD4p-Hb6sR:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000CM8RUGrrNOUpj1KHZP50_PB:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440064;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->15;EvalII->15;CHd;FP2->15;WS=af561ea8;default;FP4->66;C003;
+    - F7360B2047A90E4D;87d9ab10;741372;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->72;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440064)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-741372)
     Content-Length:
-    - '13037'
+    - '13039'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:37:53 GMT
+recorded_at: Mon, 02 Apr 2018 08:38:41 GMT
