--- a/www.dz-rs.si/4baec55aada1caca9007d0723a6c47e89ee40860.yml
+++ b/www.dz-rs.si/4baec55aada1caca9007d0723a6c47e89ee40860.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:38:29 GMT
+    - Mon, 02 Apr 2018 08:39:23 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000KMgQUWdgcEonWFW3conq_ao:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=00007qYeg3D5t6NUDRqu2PNGReT:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440132;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=af561ea8;default;FP4->59;C003;
+    - F7360B2047A90E4D;87d9ab10;741568;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->61;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440132)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-741568)
     Content-Length:
-    - '14161'
+    - '14117'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:38:27 GMT
+recorded_at: Mon, 02 Apr 2018 08:39:22 GMT
