--- a/www.dz-rs.si/9c8f6dffc340a207ac8ea6576c24f9f88776a2cc.yml
+++ b/www.dz-rs.si/9c8f6dffc340a207ac8ea6576c24f9f88776a2cc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:39:18 GMT
+    - Mon, 02 Apr 2018 08:40:09 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000v0kPNcItc1mZP6b90TRHGPZ:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000T-7I8JkzowGE5ISQ_SJogh7:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440232;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->7;EvalII->7;CHd;FP2->7;WS=af561ea8;default;FP4->56;C003;
+    - F7360B2047A90E4D;87d9ab10;741759;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->54;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440232)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-741759)
     Content-Length:
-    - '13211'
+    - '13209'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:39:17 GMT
+recorded_at: Mon, 02 Apr 2018 08:40:07 GMT
