--- a/www.dz-rs.si/11824e20c486e651f19438f2e99bc13d5e0d3d11.yml
+++ b/www.dz-rs.si/11824e20c486e651f19438f2e99bc13d5e0d3d11.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:39:38 GMT
+    - Mon, 02 Apr 2018 08:40:32 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000pAIId_yyZi_7MnA0G17bpIf:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000cgIybAC0QGgtpQ8rGkJd35t:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440279;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=af561ea8;default;FP4->71;C003;
+    - F7360B2047A90E4D;87d9ab10;741849;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->6;EvalII->6;CHd;FP2->6;WS=fd938310;default;FP4->62;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440279)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-741849)
     Content-Length:
-    - '13135'
+    - '13132'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:39:38 GMT
+recorded_at: Mon, 02 Apr 2018 08:40:31 GMT
