--- a/www.dz-rs.si/1f0793c809f253d059ca7c8e722389c6984b8d7e.yml
+++ b/www.dz-rs.si/1f0793c809f253d059ca7c8e722389c6984b8d7e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:40:16 GMT
+    - Mon, 02 Apr 2018 08:41:05 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000V6hkqAr-_SCkMehrluhrqvN:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000VLsvWxQlGDHuYU14eoKRbtE:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440351;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=af561ea8;default;FP4->54;C003;
+    - F7360B2047A90E4D;87d9ab10;741950;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->7;EvalII->7;CHd;FP2->7;WS=fd938310;default;FP4->58;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440351)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-741950)
     Content-Length:
-    - '13165'
+    - '13163'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:40:14 GMT
+recorded_at: Mon, 02 Apr 2018 08:41:04 GMT
