--- a/www.dz-rs.si/961865d67f98d1a45e89a1b0cea87b6164d900b8.yml
+++ b/www.dz-rs.si/961865d67f98d1a45e89a1b0cea87b6164d900b8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:40:47 GMT
+    - Mon, 02 Apr 2018 08:41:30 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000Ccp-4xTAxZpF308pP4Gtmgp:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000T8uDVMkK2j8zk4i3hp-VDex:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440409;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=af561ea8;default;FP4->62;C003;
+    - F7360B2047A90E4D;87d9ab10;742034;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->4;EvalII->4;CHd;FP2->4;WS=fd938310;default;FP4->74;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440409)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-742034)
     Content-Length:
     - '12755'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:40:45 GMT
+recorded_at: Mon, 02 Apr 2018 08:41:27 GMT
