--- a/www.dz-rs.si/045e5c0817cf95cf54e092c1d0644294cd33c713.yml
+++ b/www.dz-rs.si/045e5c0817cf95cf54e092c1d0644294cd33c713.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:42:07 GMT
+    - Mon, 02 Apr 2018 08:42:45 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000Lxi9vC9ruy_tlVvjwFUigau:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000Wk8mWffKvljcPtpLP3Gx_NX:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440570;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=af561ea8;default;FP4->58;C003;
+    - F7360B2047A90E4D;87d9ab10;742389;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->14;EvalII->14;CHd;FP2->14;WS=fd938310;default;FP4->66;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440570)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-742389)
     Content-Length:
-    - '12843'
+    - '12842'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:42:05 GMT
+recorded_at: Mon, 02 Apr 2018 08:42:44 GMT
