--- a/www.dz-rs.si/c34a2790b545ec6fe8d08ed37513d8c055774e78.yml
+++ b/www.dz-rs.si/c34a2790b545ec6fe8d08ed37513d8c055774e78.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:42:32 GMT
+    - Mon, 02 Apr 2018 08:43:09 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000isuvRgTlDILc2lu7fWn4web:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000r9Yngz5P3c_wyzkVvRd24X1:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440629;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->7;EvalII->7;CHd;FP2->7;WS=af561ea8;default;FP4->60;C003;
+    - F7360B2047A90E4D;87d9ab10;742481;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->66;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440629)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-742481)
     Content-Length:
-    - '13353'
+    - '13354'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:42:31 GMT
+recorded_at: Mon, 02 Apr 2018 08:43:08 GMT
