--- a/www.dz-rs.si/da7f65fc1f643427981b00fb9a061f2b9b1b9f36.yml
+++ b/www.dz-rs.si/da7f65fc1f643427981b00fb9a061f2b9b1b9f36.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:42:46 GMT
+    - Mon, 02 Apr 2018 08:43:20 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=000098rTshBudMe2vjGJF2dypQi:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000Sar3M6p8eDrqw9la3tzlmUI:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440658;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->10;EvalII->10;CHd;FP2->10;WS=af561ea8;default;FP4->64;C003;
+    - F7360B2047A90E4D;87d9ab10;742513;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->6;EvalII->6;CHd;FP2->6;WS=fd938310;default;FP4->466;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440658)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-742513)
     Content-Length:
-    - '14293'
+    - '14297'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:42:44 GMT
+recorded_at: Mon, 02 Apr 2018 08:43:18 GMT
