--- a/www.dz-rs.si/0d423a7a740776201107f27db724a9f5d5e6bedb.yml
+++ b/www.dz-rs.si/0d423a7a740776201107f27db724a9f5d5e6bedb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 31 Mar 2018 03:42:55 GMT
+    - Mon, 02 Apr 2018 08:43:35 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=0000nbIo7NCHwBARH3kbuMIU6WV:-1; Path=/; HttpOnly
-    - ZNPCQ003-33313000=af561ea8; Path=/; Domain=.dz-rs.si
+    - JSESSIONID=0000qE_P4l9dRqGQlGQ_SyUiNLs:-1; Path=/; HttpOnly
+    - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25440671;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->5;EvalII->5;CHd;FP2->5;WS=af561ea8;default;FP4->63;C003;
+    - F7360B2047A90E4D;87d9ab10;742563;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->56;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25440671)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-742563)
     Content-Length:
-    - '13521'
+    - '13523'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 31 Mar 2018 03:42:53 GMT
+recorded_at: Mon, 02 Apr 2018 08:43:33 GMT
