200 OK http://www.dz-rs.si/wps/portal/en/Home/ODrzavnemZboru/KdoJeKdo/PoslankeInPoslanci/poslanec?idOseba=P176

--- a/www.dz-rs.si/14f0359693915b1ebec1d29d44f476c88468064f.yml
+++ b/www.dz-rs.si/14f0359693915b1ebec1d29d44f476c88468064f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 01 May 2018 13:22:00 GMT
+    - Wed, 02 May 2018 22:03:37 GMT
     Strict-Transport-Security:
     - max-age=31536000;includeSubDomains
     X-Powered-By:
@@ -40,15 +40,15 @@ response:
     Content-Language:
     - en
     Set-Cookie:
-    - JSESSIONID=00001fRTmDD5D2eVQiFpfCG6ot4:-1; Path=/; HttpOnly
+    - JSESSIONID=0000ibcodMc4gxtuFlaWkM61bAO:-1; Path=/; HttpOnly
     - ZNPCQ003-33313000=fd938310; Path=/; Domain=.dz-rs.si
     X-Mag:
-    - F7360B2047A90E4D;87d9ab10;25298458;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->8;EvalII->8;CHd;FP2->8;WS=fd938310;default;FP4->66;C003;
+    - F7360B2047A90E4D;87d9ab10;155636;usrLkup->0;usrBase->0;getPRBefFind->0;getPRBefFind->0;PRAfterFind->0;portal-en;publicURL->0;http-www;default;SH;FF1End->0;SendSoapStart->0;SendSoapExit->9;EvalII->9;CHd;FP2->9;WS=fd938310;default;FP4->68;C003;
     Via:
-    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-25298458)
+    - 1.1 www.dz-rs.si (Access Gateway-ag-F7360B2047A90E4D-155636)
     Content-Length:
-    - '13226'
+    - '13239'
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 01 May 2018 13:21:58 GMT
+recorded_at: Wed, 02 May 2018 22:03:35 GMT
